<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/activity_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/Running_Description"
            android:src="@drawable/running" />

        <TextView
            android:id="@+id/activity_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/titleRunning"
            android:textSize="@dimen/running_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/weight_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/txtWeight"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/duration_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/txtDuration"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <Spinner
            android:id="@+id/intensity_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/view_summary_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btnWorkoutSummary"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/start_tracking_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btnTracking"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/schedule_workout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btnSchedule"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/play_workout_audio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btnAudio"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/convert_units_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btnConvertUnits"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</ScrollView>
