<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/convertUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConvertUnits"
        android:textAlignment="center"
        android:textSize="@dimen/running_size"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="291dp"
        android:contentDescription="@string/Units_Description"
        app:srcCompat="@drawable/unit" />

    <EditText
        android:id="@+id/unitInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/txtInput"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />

    <Spinner
        android:id="@+id/unitSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnconvert"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/conversionResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
