<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtListMenu"
        android:textAlignment="center"
        android:textSize="@dimen/txtSplash"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fitnessImage"
        app:srcCompat="@drawable/list" />

    <ListView
        android:id="@+id/activity_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/openWebPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_web_page" />

</LinearLayout>